# musiclab

./: .env.example  .gitignore  01_parse.py  02_enrich_audio.py  02_enrich_meta.py  03_enrich_audio_library.py  03_index.py  03_index_library.py  04_hypothesis.py  05_build_cards.py  06_transitions.py  README.md  _check_unmatched.py  _export_unmatched.py  architecture.html  build_chain.py  enrich_library.py  pyproject.toml  ruff.toml  run.ps1  train_genre_classifier.py
.github/workflows/: ci.yml
data/playlists/: ambient_spaces.json  bass_pressure.json  day1.json  electro_currents.json  fresh_cuts.json  house_grooves.json  label_spotlight.json  leftfield_oddities.json  techno_depths.json
data/samples/: artist_sample.json  set_sample.json  tracks_sample.json  venue_sample.json
data/sets/: set_yousuke-yukimatsu_midnight-shift-u-ukeur-uk1mat.json  set_yousuke-yukimatsu_u-ukeur-uk1mat-u-boiler-room.json  set_yousuke-yukimatsu_yousuke-yukimatsu-keep-hush.json  set_øuuk-uk1matu_pure-guest030-yousuke-yukimats.json
data/venues/: hör-berlin.json  keep-hush.json  pure.json
deploy/: Dockerfile  README.md  requirements.txt  server.py
deploy/terraform/: main.tf  terraform.tfvars.example
lib/: lib_io.py  rate_limits.py
models/: genre_classifier.pt
musiclab/: __init__.py  classifier.py  cli.py  transitions.py  utils.py
qdrant/: docker-compose.yml
schemas/: artist.schema.json  hypothesis.schema.json  set.schema.json
scripts/: _check_unmatched.py  _export_unmatched.py
tests/: test_analysis.py  test_camelot.py  test_classifier.py  test_parsing.py  test_transitions.py  test_vectors.py
